Added type filter to the Recipe List.